==> aws/amazon-freertos/vendors/infineon/secure_elements/optiga_trust_x/pal/stm32l475iot_freertos/pal_i2c.c <==
#include "optiga/pal/pal_i2c.h"
#include "stm32l4xx_hal.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"

pal_status_t pal_i2c_init(const pal_i2c_t* p_i2c_context)
{
	uint16_t status = PAL_STATUS_FAILURE;
	stm_i2c_ctx_t * p_i2c_ctx = NULL;
	I2C_HandleTypeDef* p_i2c = NULL;
	GPIO_InitTypeDef  gpio_init_structure;

	do {

		if (p_i2c_context == NULL)
			break;

		p_i2c_ctx =  (stm_i2c_ctx_t *)p_i2c_context->p_i2c_hw_config;
		p_i2c = &p_i2c_ctx->i2c;

		/* I2C configuration */
		p_i2c->Instance              = p_i2c_ctx->i2c_params.i2c_inst;
		p_i2c->Init.Timing           = p_i2c_ctx->i2c_params.timing;
		p_i2c->Init.OwnAddress1      = 0;
		p_i2c->Init.AddressingMode   = I2C_ADDRESSINGMODE_7BIT;
		p_i2c->Init.DualAddressMode  = I2C_DUALADDRESS_DISABLE;
		p_i2c->Init.OwnAddress2      = 0;
		p_i2c->Init.GeneralCallMode  = I2C_GENERALCALL_DISABLE;
		p_i2c->Init.NoStretchMode    = I2C_NOSTRETCH_DISABLE;

		/*** Configure the GPIOs ***/
		/* Enable GPIO clock */
		__HAL_RCC_GPIOB_CLK_ENABLE();

		/* Configure I2C Tx, Rx as alternate function */
		gpio_init_structure.Pin = GPIO_PIN_8 | GPIO_PIN_9;
		gpio_init_structure.Mode = GPIO_MODE_AF_OD;
		gpio_init_structure.Pull = GPIO_NOPULL;
		gpio_init_structure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
		gpio_init_structure.Alternate = GPIO_AF4_I2C1;
		HAL_GPIO_Init(GPIOB, &gpio_init_structure);

		/*** Configure the I2C peripheral ***/
		/* Enable I2C clock */
		__HAL_RCC_I2C1_CLK_ENABLE();

		/* Force the I2C peripheral clock reset */
		__HAL_RCC_I2C1_FORCE_RESET();

		/* Release the I2C peripheral clock reset */
		__HAL_RCC_I2C1_RELEASE_RESET();

		/* Enable and set I2Cx Interrupt to a lower priority */
		HAL_NVIC_SetPriority(I2C1_EV_IRQn, 0x0F, 0);
		HAL_NVIC_EnableIRQ(I2C1_EV_IRQn);

		/* Enable and set I2Cx Interrupt to a lower priority */
		HAL_NVIC_SetPriority(I2C1_ER_IRQn, 0x0F, 0);
		HAL_NVIC_EnableIRQ(I2C1_ER_IRQn);

		if(HAL_I2C_Init(p_i2c) != HAL_OK)
		{
			break;
		}

		HAL_I2CEx_ConfigAnalogFilter(p_i2c, I2C_ANALOGFILTER_ENABLE);

		/* Create the handler for the callbacks. */
		xTaskCreate( i2c_result_handler,       /* Function that implements the task. */
					"TrstI2CXHndlr",          /* Text name for the task. */
					configMINIMAL_STACK_SIZE,      /* Stack size in words, not bytes. */
					NULL,    /* Parameter passed into the task. */
					tskIDLE_PRIORITY,/* Priority at which the task is created. */
					NULL );      /* Used to pass out the created task's handle. */

		/* Create a queue for results. Not more than 2 interrupts one by one are expected*/
		trustx_i2cresult_queue = xQueueCreate( 2, sizeof( i2c_result_t ) );

		status = PAL_STATUS_SUCCESS;
	}while(0);

    return status;
}

pal_status_t pal_i2c_write(pal_i2c_t* p_i2c_context,uint8_t* p_data , uint16_t length)
{
    pal_status_t status = PAL_STATUS_FAILURE;
    I2C_HandleTypeDef * p_i2c = NULL;

    //Acquire the I2C bus before read/write
    if((PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context)) && (p_i2c_context != NULL))
    {
        gp_pal_i2c_current_ctx = p_i2c_context;
        p_i2c = &((stm_i2c_ctx_t *)(p_i2c_context->p_i2c_hw_config))->i2c;

        //Invoke the low level i2c master driver API to write to the bus
        if (HAL_I2C_Master_Transmit(p_i2c, (p_i2c_context->slave_address << 1), p_data, length, 50) != HAL_OK)
        {
            //If I2C Master fails to invoke the write operation, invoke upper layer event handler with error.

            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_ERROR);
        }
        else
        {
            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_SUCCESS);
            status = PAL_STATUS_SUCCESS;
        }

        //Release I2C Bus
        pal_i2c_release((void *)p_i2c_context);
    }
    else
    {
        status = PAL_STATUS_I2C_BUSY;
        //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
        ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                        (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_BUSY);
    }
    return status;
}

pal_status_t pal_i2c_read(pal_i2c_t* p_i2c_context , uint8_t* p_data , uint16_t length)
{
    pal_status_t status = PAL_STATUS_FAILURE;
    I2C_HandleTypeDef * p_i2c = NULL;

    //Acquire the I2C bus before read/write
    if ((PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context)) && (p_i2c_context != NULL))
    {
        gp_pal_i2c_current_ctx = p_i2c_context;
        p_i2c = &((stm_i2c_ctx_t *)(p_i2c_context->p_i2c_hw_config))->i2c;

        //Invoke the low level i2c master driver API to read from the bus
        if (HAL_I2C_Master_Receive(p_i2c, (p_i2c_context->slave_address << 1), p_data, length, 50) != HAL_OK)
        {
            //If I2C Master fails to invoke the read operation, invoke upper layer event handler with error.

            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_ERROR);
        }
        else
        {
            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_SUCCESS);
            status = PAL_STATUS_SUCCESS;
        }

        //Release I2C Bus
        pal_i2c_release((void *)p_i2c_context);
    }
    else
    {
        status = PAL_STATUS_I2C_BUSY;
        //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
        ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                        (p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_BUSY);
    }
    return status;
}
