==> Infineon/optiga-trust-x/pal/efm32pg_zephyr/pal_i2c.c <==
#include <optiga/pal/pal_i2c.h>
#include <zephyr.h>
#include <device.h>
#include <drivers/gpio.h>
#include <drivers/i2c.h>
#define SEM_INIT_VALUE      1
#define SEM_MAX_VALUE       1
#define SEM_TAKE_SUCCESS    0

pal_status_t pal_i2c_init(const pal_i2c_t* p_i2c_context)
{
    i2c_ctx_t *current_ctx = p_i2c_context->p_i2c_hw_config;
    p_i2c_dev = device_get_binding(current_ctx->p_port_name);

    if (p_i2c_dev == 0) {
        return PAL_STATUS_FAILURE;
    }

    return PAL_STATUS_SUCCESS;
}

pal_status_t pal_i2c_write(pal_i2c_t *p_i2c_context, uint8_t *p_data,
                           uint16_t length)
{
    int lock_result;
    pal_status_t status;
    app_event_handler_t upper_layer_handler =
            (app_event_handler_t)p_i2c_context->upper_layer_event_handler;

    lock_result = k_sem_take(&i2c_bus_lock, K_NO_WAIT);

    if (lock_result == SEM_TAKE_SUCCESS) {
        int i2c_result;

        i2c_result = i2c_write(p_i2c_dev, p_data, (u32_t)length,
                           p_i2c_context->slave_address);

        if (i2c_result == 0) {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_SUCCESS);
            status = PAL_STATUS_SUCCESS;
        } else {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_ERROR);
            status = PAL_STATUS_FAILURE;
        }

        k_sem_give(&i2c_bus_lock);
    } else {
        status = PAL_STATUS_I2C_BUSY;
        upper_layer_handler(p_i2c_context->upper_layer_ctx,
                            PAL_I2C_EVENT_BUSY);
    }

    return status;
}

pal_status_t pal_i2c_read(pal_i2c_t* p_i2c_context, uint8_t* p_data,
                          uint16_t length)
{
    int lock_result;
    pal_status_t status;
    app_event_handler_t upper_layer_handler =
            (app_event_handler_t)p_i2c_context->upper_layer_event_handler;

    lock_result = k_sem_take(&i2c_bus_lock, K_NO_WAIT);

    if (lock_result == SEM_TAKE_SUCCESS) {
        int result;

        result = i2c_read(p_i2c_dev, p_data, (u32_t)length,
                          (u16_t)(p_i2c_context->slave_address));

        if (result == 0) {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_SUCCESS);
            status = PAL_STATUS_SUCCESS;
        } else {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_ERROR);
            status = PAL_STATUS_FAILURE;
        }

        k_sem_give(&i2c_bus_lock);
    } else {
        status = PAL_STATUS_I2C_BUSY;
        upper_layer_handler(p_i2c_context->upper_layer_ctx,
                            PAL_I2C_EVENT_BUSY);
    }

    return status;
}
